--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build" : "next build",
-    "start" : "next start"
+    "build": "next build",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "next": "^14.2.3",
+    "prisma": "^5.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.12.11",
+    "@types/react": "18.3.2",
+    "typescript": "5.4.5"
   }
 }
