--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^14.2.3",
     "prisma": "^5.13.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swiper": "^8.4.7"
   },
   "devDependencies": {
     "@types/node": "20.12.11",
