--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma": "^5.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "styled-components": "^6.1.11",
     "swiper": "^8.4.7"
   },
   "devDependencies": {
