--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.11",
-    "swiper": "^8.4.7"
+    "swiper": "^8.4.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.12.11",
