--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "prisma generate",
+    "build": "prisma generate && next build",
     "dev": "next dev",
-    "build": "next build",
     "start": "next start"
   },
   "keywords": [],
