--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.13.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^11.2.10",
     "iron-session": "^8.0.1",
     "next": "^14.2.3",
     "prisma": "^5.14.0",
