--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prisma": "^5.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.11",
     "swiper": "^8.4.7",
     "zod": "^3.23.8"
